<resources>
    <string name="app_name">Pill me</string>
    <string name="titleCalendarPage">Pill Me</string>
    <string name="title_panel_add_pills">Ajouter un médicament</string>
    <string name="label_name_pills">Nom :</string>
    <string name="label_time_to_take">Durée par défaut</string>
    <string name="label_defautl_take">Prise par défaut</string>
    <string name="morning_take">Matin</string>
    <string name="mid_day_take">Midi</string>
    <string name="evening_take">Soire</string>
    <string name="add_button">Ajouter</string>
    <string name="title_prescription_add">Ajouter une prise de médicament</string>
    <string name="title_prescription_modify">Modifier une prescription</string>
    <string name="open_activity_add_pill">+</string>
    <string name="label_pill">Médicament</string>
    <string name="label_date_pill">Dates</string>
    <string name="pillAdded">Le médicament a été ajouté avec succes !</string>
    <string name="start">Début :</string>
    <string name="end">Fin :</string>
    <string name="choseDate">Selectionner une date</string>
    <string name="default_take">Durée recommandée (jour) :</string>
    <string name="pillNameEmpty">Veuilliez renseigner le nom</string>
    <string name="no_prescription">Pas de préscription à ce jour</string>
    <string name="prescription_added">La prescription a été ajoutée !</string>
    <string name="fill_all_the_fields">Veuillez remplire TOUT les champs !</string>
    <string name="prescription_modified">La prescription a été modifiée !</string>
    <string name="submit_button">Enregister</string>
    <string name="editPill">Modifier le médicament</string>
    <string name="pillEdited">Le médicament à été modifié avec succés !</string>
    <string name="pillNotEdited">Une erreur est survenue lors de la modification !</string>
</resources>