<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/label_defautl_take"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/mornign_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/morning_take"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/mid_day_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/mid_day_take"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/evening_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/evening_take"
        android:textSize="16sp" />

</LinearLayout>