<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="2dp"
    android:paddingTop="5dp"
    android:paddingEnd="2dp">

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="20/10/2023"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/morning_text_view"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/morning_take"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/morning_container_pill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp" />

    <TextView
        android:id="@+id/mid_day_text_view"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/mid_day_take"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/mid_day_container_pill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp"></LinearLayout>

    <TextView
        android:id="@+id/evening_text_view"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/evening_take"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/evening_container_pill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp" />

</LinearLayout>