<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.AddTakePills">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:gravity="center_horizontal"
        android:text="@string/title_panel_add_take_pills"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="244dp"
        android:layout_height="38dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="191dp" />

    <Button
        android:id="@+id/open_add_pill_button"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/open_activity_add_pill"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="330dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/label_pill"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="147dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/label_date_pill"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="265dp" />

</androidx.constraintlayout.widget.ConstraintLayout>